Separate less by sites

--- a/templates/anon_group.html
+++ b/templates/anon_group.html
@@ -59,24 +59,7 @@
 				</li>
 						
 								<!-- NOT LOGGED IN -->
-								<li class="dropdown">
-										<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-											<div class="user-header">
-												<div class="user-profile-pic">
-													<!--<img src="img/defaultUser.png" class="" />-->
-												</div>
-												<div class="user-display-name">username</div>
-											</div>
-											<!--<img src="img/defaultUser.png" class="profile-pic" />!-->
-											<!--Tin Kalzetin-->
-										</a>
-										<ul role="menu" class="dropdown-menu">
-											<li><a href="#">Profile</a></li>
-											<li><a href="#">Library</a></li>
-											<li><a href="#">Book clubs</a></li>
-											<li><a href="#">Log out</a></li>
-										</ul>
-									</li>	
+											<li><a href="#">Log in</a></li>
 				<!-- LOGGED IN -->
 								</ul>
 				</div>
