--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -59,7 +59,7 @@
 		</li>
         
             <!-- NOT LOGGED IN -->
-            			<li><a href="/prologes/login">Log in</a></li>
+            			<li><a href="#">Log in</a></li>
 		<!-- LOGGED IN -->
 		        </ul>
     </div>
