--- a/css/styles.less
+++ b/css/styles.less
@@ -24,6 +24,9 @@
 
 @editable-border: #3fb0ac;
 
+@import "comments.less";
+@import "group.less";
+
 body {
 	background-color: #fafafa!important;
 	font-family:Lato,sans-serif;
@@ -106,8 +109,10 @@ body {
 			border: none;
 			outline: none;
 			resize: none;
-			margin-top: 0!important;
-			width: 100%;
+			margin-top: 1px!important;
+			margin-left: 2px;
+			margin-right: 1px;
+			width: 99%;
 		}
 	}
 }
@@ -157,237 +162,6 @@ body {
 	align-items: center;
 }
 
-// Group section
-
-#main-group--editable {
-	display: none;
-}
-
-.main-group {
-	display: flex;
-	justify-content: flex-start;
-
-	.info-panel {
-		margin-left: 20px;
-		margin-top: 10px;
-
-		.title {
-			font-size: 32px;
-			font-weight: 600;
-		}
-
-		.handle {
-			margin-top: 10px;
-			color: @handler-color;
-			font-size: 22px;
-		}
-
-		.description {
-			margin-top: 10px;
-			font-size: 16px;
-
-			textarea {
-				height: 130px;
-				line-height: 2em;
-			}
-		}
-	}
-
-	.icon-panel {
-		display: flex;
-		flex-direction: column;
-		padding: 10 30 10 30;
-
-		.actions {
-			display: flex;
-
-			& > * {
-				margin-top: 8px;
-			}
-		}
-
-		.edit-club {
-			justify-content: space-around;
-		}
-
-		.change-icon {
-			justify-content: center;
-		}
-	}
-
-	.icon {
-		display: flex;
-		justify-content: center;
-
-		.edit-button {
-			z-index: 2;
-			position: absolute;
-			right: 8px;
-			top: 10px;
-			margin: auto;
-			background-color: #3fb0ac;
-			border-radius: 50%;
-			width: 25px;
-			height: 25px;
-
-			.edit-icon {
-				color: #fff;
-				margin-top: 6px;
-				margin-left: 8px;
-			}
-		}
-
-		.cancel-edit {
-			background-color: @prologes-error-red!important;
-		}
-
-		img {
-			width: 140px;
-			height: 140px;
-			border-radius: 50%;
-			margin-right: auto;
-			margin-left: auto;
-		}
-	}
-
-	.group-membership {
-		display: flex;
-		justify-content: center;
-		margin-top: 20px;
-	}
-
-	.hover-button {
-		width: 75%;
-
-		&:focus,
-		&:hover {
-			background-color: @prologes-red;
-
-			.unfocused-text {
-				display: none;
-			}
-
-			.focused-text {
-				display: block;
-			}
-		}
-
-		.unfocused-text {
-			color: black;
-			display: block;
-		}
-
-		.focused-text {
-			color: white;
-			display: none;
-		}
-
-	}
-}
-
-.group-member {
-	display: flex;
-	justify-content: flex-start;
-	margin-top: 5px;
-
-	.info {
-		display: flex;
-		flex-direction: column;
-		margin-left: 8px;
-		margin-top: 8px;
-		overflow: hidden;
-		white-space: nowrap;
-
-		.display-name {
-
-			a {
-				color: @name-color;
-				font-weight: 600;
-
-				div {
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-		}
-
-		.user-name {
-
-			a {
-			 color: @handler-color;
-			 font-size: 12px;
-			 overflow: hidden;
-			 text-overflow: ellipsis;
-
-				div {
-					overflow: hidden;
-					text-overflow: ellipsis;
-				}
-			}
-		}
-	}
-
-	div.icon {
-		display: flex;
-		justify-content: center;
-		align-content: center;
-		align-items: center;
-	}
-
-	img.icon {
-		border-radius: 50%;
-		width: 48px;
-		height: 48px;
-	}
-}
-
-.comment-area {
-	
-	background-color: #fff;
-	border: 1px solid #e4e4e4;
-	margin-top: 1em;
-	margin-bottom: 7px;
-	padding-left: 10px;
-	border-radius: 4px;
-
-	.comment-form {
-		width: 100%;
-		margin: 5px;
-		display: flex;
-		align-items: flex-end;
-		justify-content: flex-end;
-
-		.actions-container {
-			display: flex;
-			flex-direction: column;
-
-			.btn {
-				margin-right: 10px;
-			}
-		}
-
-		.textarea-container {
-			display: flex;
-			flex-direction: column;
-			width: 100%;
-
-			textarea {
-				height: 66px;
-				width: 100%;
-				border: none;
-				outline: none;
-				resize: none;
-				font-size: 13px;
-			}
-
-			.error-area {
-				color: @prologes-error-red;
-				font-size: 12px;
-			}
-		}
-	}
-}
-
 .side-tab-panel {
 	//
 
@@ -397,117 +171,5 @@ body {
 		border-top: 0;
 		border-bottom-right-radius: 4px;
 		border-bottom-left-radius: 4px;
-	}
-
-	.current-reading {
-		//
-
-		padding-bottom: 10px;
-
-		.actions {
-			margin-top: 10px;
-			display: flex;
-			justify-content: center;
-		}
-
-		.info {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			margin-right: 8px;
-			margin-left: 8px;
-		}
-
-		.icon {
-
-			img {
-				height: 150px;
-			}
-		}
-	}
-
-	.group-wishlist {
-		//
-
-		.actions {
-			margin-top: 10px;
-			display: flex;
-			justify-content: center;
-		}
-
-		.section-name {
-			margin-top: 8px;
-			margin-left: 12px;
-			font-size: 16px;
-		}
-
-		.selected-book {
-			.book {
-				display: flex;
-				flex-direction: column;
-				margin-left: 8px;
-				margin-right: 8px;
-
-				.info {
-					.title {
-						text-decoration: none;
-						font-size: 16px;
-
-						&:focus,
-						&:hover {
-							text-decoration: none;
-						}
-					}
-
-					.author {
-						font-size: 14px;
-						a {
-							text-decoration: none;
-						}
-					}
-				}
-
-				.icon {
-
-					img {
-						height: 80px;
-					}
-				}
-			}
-		}
-
-		.list {
-			margin-top: 8px;
-			//
-			.book {
-				display: flex;
-				border-top: 1px solid #e4e4e4;
-
-				.info {
-					display: flex;
-					flex-direction: column;
-					margin-left: 8px;
-
-					.title {
-						font-size: 14px;
-						margin-top: 5px;
-						margin-bottom: 4px;
-					}
-
-					.author {
-						font-size: 10px;
-					}
-				}
-
-				.icon {
-
-					img {
-						height: 50px;
-						margin: 2px;
-						margin-right: 0;
-					}
-				}
-			}
-		}
 	}
 }
