--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -59,7 +59,24 @@
 		</li>
         
             <!-- NOT LOGGED IN -->
-            			<li><a href="/prologes/login">Log in</a></li>
+						<li class="dropdown">
+								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+									<div class="user-header">
+										<div class="user-profile-pic">
+											<!--<img src="img/defaultUser.png" class="" />-->
+										</div>
+										<div class="user-display-name">username</div>
+									</div>
+									<!--<img src="img/defaultUser.png" class="profile-pic" />!-->
+									<!--Tin Kalzetin-->
+								</a>
+								<ul role="menu" class="dropdown-menu">
+										<li><a href="#">Profile</a></li>
+										<li><a href="#">Library</a></li>
+										<li><a href="#">Book clubs</a></li>
+										<li><a href="#">Log out</a></li>
+								</ul>
+							</li>	
 		<!-- LOGGED IN -->
 		        </ul>
     </div>
