--- a/css/book.less
+++ b/css/book.less
@@ -29,6 +29,10 @@
     .action.active {
       color: @prologes-icon-active;
     }
+
+    .action.active {
+      color: @prologes-icon-active;
+    }
   }
 
   .info {
@@ -113,6 +117,24 @@
   justify-content: space-between;
   margin-bottom: 8px;
 
+  .voting.enabled {
+
+    .up {
+      &:hover,
+      &:focus {
+        opacity: 0.4;
+        color: #3fb0ac;
+      }
+    }
+    .down {
+      &:hover,
+      &:focus {
+        opacity: 0.4;
+        color: red;
+      }
+    }
+  }
+
   .voting {
     display: flex;
     flex-direction: column;
@@ -128,11 +150,6 @@
     .up,
     .down {
       font-size: 26px;
-
-      &:not(.voted):hover,
-      &:not(.voted):focus {
-        opacity: 0.4;
-      }
     }
 
     .up.voted {
