Author template and stylesheet

--- a/templates/anon_author.html
+++ b/templates/anon_author.html
@@ -156,6 +156,58 @@
             </div>
           </div>
           <!-- End Sample -->
+  
+            <!-- Sample books -->
+            <div class="book prlg-panel">
+                <div class="icon">
+                  <img src="../img/user_clear.png">
+                </div>
+                <div class="info">
+                  <span class="title"><a href="#"><div>The Really Long Long Long Title of the Book</div></a></span>
+                </div>
+                <div class="rating">
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="fas fa-star"></span>
+                  <span class="far fa-star"></span>
+                </div>
+              </div>
+              <!-- End Sample -->
+          <!-- Sample books -->
+          <div class="book prlg-panel">
+              <div class="icon">
+                <img src="../img/user_dark.png">
+              </div>
+              <div class="info">
+                <span class="title"><a href="#"><div>The Title of the Book</div></a></span>
+              </div>
+              <div class="rating">
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="far fa-star"></span>
+              </div>
+            </div>
+            <!-- End Sample -->
+            <!-- Sample books -->
+            <div class="book prlg-panel">
+              <div class="icon">
+                <img src="../img/user_dark.png">
+              </div>
+              <div class="info">
+                <span class="title"><a href="#"><div>The Title of the Book</div></a></span>
+              </div>
+              <div class="rating">
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="fas fa-star"></span>
+                <span class="far fa-star"></span>
+              </div>
+            </div>
+            <!-- End Sample -->
         </div>
       </div>
     
