--- a/css/author.less
+++ b/css/author.less
@@ -37,16 +37,30 @@
   .book {
 
     margin-top: 3em;
+    margin-bottom: 15px;
 
     .rating {
+      display: flex;
+      justify-content: center;
       color: @light-color;
+      margin-bottom: 15px;
     }
 
     .info {
+      margin-left: 20px;
+      margin-right: 20px;
+      margin-top: 10px;
+      margin-bottom: 8px;
+      white-space: nowrap;
+
       .title {
         font-size: 20px;
-        margin-top: 10px;
-        margin-bottom: 8px;
+
+        a > * {
+          max-width: 280px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+        }
       }
     }
 
