Profile template and styles

--- a/css/styles.less
+++ b/css/styles.less
@@ -33,6 +33,7 @@
 @import "group.less";
 @import "book.less";
 @import "author.less";
+@import "profile.less";
 
 body {
 	background-color: #fafafa!important;
