Import user style sheet

--- a/css/styles.less
+++ b/css/styles.less
@@ -34,6 +34,7 @@
 @import "book.less";
 @import "author.less";
 @import "profile.less";
+@import "user.less";
 
 body {
 	background-color: #fafafa!important;
