--- a/templates/anon_home.html
+++ b/templates/anon_home.html
@@ -1,8 +1,9 @@
 
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel='stylesheet/less' href='../css/styles.less'>
+<link rel="stylesheet/less" href="../css/styles.less">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
@@ -30,12 +31,12 @@
     <div id="navbarCollapse" class="collapse navbar-collapse">
         
         <ul class="nav navbar-nav navbar-right">
-		<li class='dropdown'>
-			<a data-toggle='dropdown' class='dropdown-toggle' href='#'>
-				<div class='lang-selector'>
+		<li class="dropdown">
+			<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+				<div class="lang-selector">
 					EN				</div>
 			</a>
-			<ul role='menu' class='dropdown-menu'>
+			<ul role="menu" class="dropdown-menu">
 				<li>
 					<a href="#">English</a>
 					</li>
